Changelog 1.3.8 (XX.02.2010)
- CSS changes on options panel

Changelog 1.3.7 (24.02.2010)
- Added new option FavIconWidth. FavIconHeight will be the same as FavIconWidth.

Changelog 1.3.6 (22.02.2010)
- Added ability to point font size, window width and height on options panel
- Changed options panel
- CSS changes: set right padding to 1em in tree item

Changelog 1.3.5 (19.02.2010)
- Decrease icons size
- Made process of tree initialization faster
- Fixed errors with dimensions of body after initializing tree

Changelog 1.3.4 (19.02.2010)
- Changelog file is accessible from options panel
- Set mouse cursor as defualt
- Changed border of popup menu

Changelog 1.3.3 (18.02.2010)
- Added items into popup menu: "Open in new tab" and "Open in new window"
- Fixed errors with dimensions of popup menu

Changelog 1.3.2 (17.02.2010)
- Added option "Switch to new tab".

Changelog 1.3.1 (16.02.2010)
- Fixed errors in positioning popup menu
- Changed some styles.

Changelog 1.3.0 (15.02.2010)
- Added ability to hide unnecessary bookmarks or folders.

Changelog 1.2.0 (14.02.2010)
- Made it compatible with Chrome for Windows and Chrome 5.0 for Linux.
- Vertical scroll bar appears if it's needed.
- Added a few changes in css for options panel.

Changelog 1.1 (11.02.2010)
- Added options page which allows to configure max width of menu item and
mouse actions.