@@ -1,6 +1,6 @@
 {
     "name": "QuickBookmarksTree",
-    "version": "1.3.7.1",
+    "version": "1.3.7.2",
     "description": "Show bookmarks tree",
     "browser_action":
     {
