@@ -1,4 +1,5 @@
 Changelog 1.3.8 (XX.02.2010)
+- Moved 'tabs configuration' to 'Mouse' tab on options panel
 - CSS changes on options panel
 
 Changelog 1.3.7 (24.02.2010)
